--- a/GameRandom.html
+++ b/GameRandom.html
@@ -241,7 +241,7 @@
                 <td class="cell" id="10.19"></td>
                 <td class="cell" id="10.20"></td>
                 <td class="score">Copyright Scott Frizzell 2019</td>
-                <td><a href="GameMainScreen.html">Main Menu</a></td>
+                <td><a href="./index.html">Main Menu</a></td>
             </tr>
             <tr class="row">
                 <td class="cell" id="11.1"></td>
