--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </table>
         <table>
             <tr>
-                <td class="GameMode"><a href="GameField.html"><div><img src="./Icons/FieldLogo.png" class="GameLogo"><br>points_field</div></a></td>
-                <td class="GameMode"><a href="GameGrid.html"><div><img src="./Icons/GridLogo.png" class="GameLogo"><br>points_grid</div></a></td>
-                <td class="GameMode"><a href="GameRandom.html"><div><img src="./Icons/RandomLogo.png" class="GameLogo"><br>points_random</div></a></td>
+                <td class="GameMode"><a href="GameField.html"><div><img src="./Icons/FieldLogo.png" class="GameLogo"><br>Field</div></a></td>
+                <td class="GameMode"><a href="GameGrid.html"><div><img src="./Icons/GridLogo.png" class="GameLogo"><br>Grid</div></a></td>
+                <td class="GameMode"><a href="GameRandom.html"><div><img src="./Icons/RandomLogo.png" class="GameLogo"><br>Random</div></a></td>
             </tr>
         </table>
         <a href="./DevMode.html" id="devMode">Developer Mode</a>
