--- a/GameRandom.html
+++ b/GameRandom.html
@@ -26,7 +26,7 @@
                 <td class="cell" id="1.15"></td>
                 <td class="cell" id="1.16"></td>
                 <td class="cell" id="1.17"></td>
-                <td class="cell" id="1.18"></td>
+                <td class="cell RandomWall" id="1.18"></td>
                 <td class="cell" id="1.19"></td>
                 <td class="cell" id="1.20"></td>
                 <td rowspan="2">
@@ -44,7 +44,7 @@
                 <td class="cell" id="2.3"></td>
                 <td class="cell" id="2.4"></td>
                 <td class="cell" id="2.5"></td>
-                <td class="cell" id="2.6"></td>
+                <td class="cell RandomWall id="2.6"></td>
                 <td class="cell" id="2.7"></td>
                 <td class="cell" id="2.8"></td>
                 <td class="cell" id="2.9"></td>
@@ -89,7 +89,7 @@
                 <td class="cell" id="4.2"></td>
                 <td class="cell RandomWall" id="4.3"></td>
                 <td class="cell" id="4.4"></td>
-                <td class="cell" id="4.5"></td>
+                <td class="cell RandomWall" id="4.5"></td>
                 <td class="cell" id="4.6"></td>
                 <td class="cell" id="4.7"></td>
                 <td class="cell RandomWall" id="4.8"></td>
@@ -142,7 +142,7 @@
                 <td class="cell RandomWall" id="6.11"></td>
                 <td class="cell" id="6.12"></td>
                 <td class="cell" id="6.13"></td>
-                <td class="cell" id="6.14"></td>
+                <td class="cell RandomWall" id="6.14"></td>
                 <td class="cell" id="6.15"></td>
                 <td class="cell RandomWall" id="6.16"></td>
                 <td class="cell" id="6.17"></td>
@@ -158,7 +158,7 @@
                 <td class="cell" id="7.3"></td>
                 <td class="cell RandomWall" id="7.4"></td>
                 <td class="cell" id="7.5"></td>
-                <td class="cell" id="7.6"></td>
+                <td class="cell RandomWall" id="7.6"></td>
                 <td class="cell" id="7.7"></td>
                 <td class="cell" id="7.8"></td>
                 <td class="cell RandomWall" id="7.9"></td>
@@ -222,19 +222,19 @@
             <tr class="row">
                 <td class="cell" id="10.1"></td>
                 <td class="cell" id="10.2"></td>
-                <td class="cell" id="10.3"></td>
+                <td class="cell RandomWall" id="10.3"></td>
                 <td class="cell" id="10.4"></td>
                 <td class="cell" id="10.5"></td>
                 <td class="cell" id="10.6"></td>
-                <td class="cell" id="10.7"></td>
-                <td class="cell" id="10.8"></td>
+                <td class="cell RandomWall" id="10.7"></td>
+                <td class="cell RandomWall" id="10.8"></td>
                 <td class="cell" id="10.9"></td>
                 <td class="cell" id="10.10"></td>
                 <td class="cell" id="10.11"></td>
                 <td class="cell" id="10.12"></td>
                 <td class="cell" id="10.13"></td>
                 <td class="cell" id="10.14"></td>
-                <td class="cell" id="10.15"></td>
+                <td class="cell RandomWall" id="10.15"></td>
                 <td class="cell" id="10.16"></td>
                 <td class="cell" id="10.17"></td>
                 <td class="cell" id="10.18"></td>
@@ -246,19 +246,19 @@
             <tr class="row">
                 <td class="cell" id="11.1"></td>
                 <td class="cell" id="11.2"></td>
-                <td class="cell" id="11.3"></td>
+                <td class="cell RandomWall" id="11.3"></td>
                 <td class="cell" id="11.4"></td>
                 <td class="cell" id="11.5"></td>
                 <td class="cell" id="11.6"></td>
-                <td class="cell" id="11.7"></td>
+                <td class="cell RandomWall" id="11.7"></td>
                 <td class="cell" id="11.8"></td>
-                <td class="cell" id="11.9"></td>
+                <td class="cell RandomWall" id="11.9"></td>
                 <td class="cell" id="11.10"></td>
                 <td class="cell" id="11.11"></td>
                 <td class="cell" id="11.12"></td>
                 <td class="cell" id="11.13"></td>
                 <td class="cell" id="11.14"></td>
-                <td class="cell" id="11.15"></td>
+                <td class="cell RandomWall" id="11.15"></td>
                 <td class="cell" id="11.16"></td>
                 <td class="cell" id="11.17"></td>
                 <td class="cell" id="11.18"></td>
@@ -270,13 +270,13 @@
                 <td class="cell" id="12.1"></td>
                 <td class="cell" id="12.2"></td>
                 <td class="cell" id="12.3"></td>
-                <td class="cell" id="12.4"></td>
+                <td class="cell RandomWall" id="12.4"></td>
                 <td class="cell" id="12.5"></td>
                 <td class="cell" id="12.6"></td>
                 <td class="cell" id="12.7"></td>
-                <td class="cell" id="12.8"></td>
+                <td class="cell RandomWall" id="12.8"></td>
                 <td class="cell" id="12.9"></td>
-                <td class="cell" id="12.10"></td>
+                <td class="cell RandomWall" id="12.10"></td>
                 <td class="cell" id="12.11"></td>
                 <td class="cell" id="12.12"></td>
                 <td class="cell" id="12.13"></td>
@@ -285,7 +285,7 @@
                 <td class="cell" id="12.16"></td>
                 <td class="cell" id="12.17"></td>
                 <td class="cell" id="12.18"></td>
-                <td class="cell" id="12.19"></td>
+                <td class="cell RandomWall" id="12.19"></td>
                 <td class="cell" id="12.20"></td>
                 <td>
                     <form class="score">
@@ -295,17 +295,17 @@
                 <td><div class="submitButton" onClick="setWinScore()">Submit</div></td>
             </tr>
             <tr class="row">
-                <td class="cell" id="13.1"></td>
+                <td class="cell RandomWall" id="13.1"></td>
                 <td class="cell" id="13.2"></td>
                 <td class="cell" id="13.3"></td>
                 <td class="cell" id="13.4"></td>
                 <td class="cell" id="13.5"></td>
                 <td class="cell" id="13.6"></td>
-                <td class="cell" id="13.7"></td>
+                <td class="cell RandomWall" id="13.7"></td>
                 <td class="cell" id="13.8"></td>
                 <td class="cell" id="13.9"></td>
-                <td class="cell" id="13.10"></td>
-                <td class="cell" id="13.11"></td>
+                <td class="cell RandomWall" id="13.10"></td>
+                <td class="cell RandomWall" id="13.11"></td>
                 <td class="cell" id="13.12"></td>
                 <td class="cell" id="13.13"></td>
                 <td class="cell" id="13.14"></td>
@@ -313,7 +313,7 @@
                 <td class="cell" id="13.16"></td>
                 <td class="cell" id="13.17"></td>
                 <td class="cell" id="13.18"></td>
-                <td class="cell" id="13.19"></td>
+                <td class="cell RandomWall" id="13.19"></td>
                 <td class="cell" id="13.20"></td>
                 <td class="score" rowspan="3"><p id="winner"></p></td>
             </tr>
@@ -321,14 +321,14 @@
                 <td class="cell" id="14.1"></td>
                 <td class="cell" id="14.2"></td>
                 <td class="cell" id="14.3"></td>
-                <td class="cell" id="14.4"></td>
+                <td class="cell RandomWall" id="14.4"></td>
                 <td class="cell" id="14.5"></td>
                 <td class="cell" id="14.6"></td>
-                <td class="cell" id="14.7"></td>
+                <td class="cell RandomWall" id="14.7"></td>
                 <td class="cell" id="14.8"></td>
                 <td class="cell" id="14.9"></td>
                 <td class="cell" id="14.10"></td>
-                <td class="cell" id="14.11"></td>
+                <td class="cell RandomWall" id="14.11"></td>
                 <td class="cell" id="14.12"></td>
                 <td class="cell" id="14.13"></td>
                 <td class="cell" id="14.14"></td>
@@ -342,13 +342,13 @@
             <tr class="row">
                 <td class="cell" id="15.1"></td>
                 <td class="cell" id="15.2"></td>
-                <td class="cell" id="15.3"></td>
+                <td class="cell RandomWall" id="15.3"></td>
                 <td class="cell" id="15.4"></td>
-                <td class="cell" id="15.5"></td>
+                <td class="cell RandomWall" id="15.5"></td>
                 <td class="cell" id="15.6"></td>
                 <td class="cell" id="15.7"></td>
                 <td class="cell" id="15.8"></td>
-                <td class="cell" id="15.9"></td>
+                <td class="cell RandomWall" id="15.9"></td>
                 <td class="cell" id="15.10"></td>
                 <td class="cell" id="15.11"></td>
                 <td class="cell" id="15.12"></td>
@@ -357,7 +357,7 @@
                 <td class="cell" id="15.15"></td>
                 <td class="cell" id="15.16"></td>
                 <td class="cell" id="15.17"></td>
-                <td class="cell" id="15.18"></td>
+                <td class="cell RandomWall" id="15.18"></td>
                 <td class="cell" id="15.19"></td>
                 <td class="cell" id="15.20"></td>
             </tr>
@@ -367,25 +367,25 @@
                 <td class="cell" id="16.3"></td>
                 <td class="cell" id="16.4"></td>
                 <td class="cell" id="16.5"></td>
-                <td class="cell" id="16.6"></td>
+                <td class="cell RandomWall" id="16.6"></td>
                 <td class="cell" id="16.7"></td>
                 <td class="cell" id="16.8"></td>
                 <td class="cell" id="16.9"></td>
                 <td class="cell" id="16.10"></td>
-                <td class="cell" id="16.11"></td>
+                <td class="cell RandomWall" id="16.11"></td>
                 <td class="cell" id="16.12"></td>
                 <td class="cell" id="16.13"></td>
                 <td class="cell" id="16.14"></td>
                 <td class="cell" id="16.15"></td>
-                <td class="cell" id="16.16"></td>
-                <td class="cell" id="16.17"></td>
+                <td class="cell RandomWall" id="16.16"></td>
+                <td class="cell RandomWall" id="16.17"></td>
                 <td class="cell" id="16.18"></td>
                 <td class="cell" id="16.19"></td>
                 <td class="cell" id="16.20"></td>
             </tr>
             <tr class="row">
-                <td class="cell" id="17.1"></td>
-                <td class="cell" id="17.2"></td>
+                <td class="cell RandomWall" id="17.1"></td>
+                <td class="cell RandomWall" id="17.2"></td>
                 <td class="cell" id="17.3"></td>
                 <td class="cell" id="17.4"></td>
                 <td class="cell" id="17.5"></td>
@@ -393,14 +393,14 @@
                 <td class="cell" id="17.7"></td>
                 <td class="cell" id="17.8"></td>
                 <td class="cell" id="17.9"></td>
-                <td class="cell" id="17.10"></td>
+                <td class="cell RandomWall" id="17.10"></td>
                 <td class="cell" id="17.11"></td>
                 <td class="cell" id="17.12"></td>
                 <td class="cell" id="17.13"></td>
                 <td class="cell" id="17.14"></td>
-                <td class="cell" id="17.15"></td>
+                <td class="cell RandomWall" id="17.15"></td>
                 <td class="cell" id="17.16"></td>
-                <td class="cell" id="17.17"></td>
+                <td class="cell RandomWall" id="17.17"></td>
                 <td class="cell" id="17.18"></td>
                 <td class="cell" id="17.19"></td>
                 <td class="cell" id="17.20"></td>
@@ -412,35 +412,35 @@
                 <td class="cell" id="18.4"></td>
                 <td class="cell" id="18.5"></td>
                 <td class="cell" id="18.6"></td>
-                <td class="cell" id="18.7"></td>
+                <td class="cell RandomWall" id="18.7"></td>
                 <td class="cell" id="18.8"></td>
                 <td class="cell" id="18.9"></td>
-                <td class="cell" id="18.10"></td>
+                <td class="cell RandomWall" id="18.10"></td>
                 <td class="cell" id="18.11"></td>
                 <td class="cell" id="18.12"></td>
                 <td class="cell" id="18.13"></td>
                 <td class="cell" id="18.14"></td>
                 <td class="cell" id="18.15"></td>
-                <td class="cell" id="18.16"></td>
+                <td class="cell RandomWall" id="18.16"></td>
                 <td class="cell" id="18.17"></td>
-                <td class="cell" id="18.18"></td>
+                <td class="cell RandomWall" id="18.18"></td>
                 <td class="cell" id="18.19"></td>
                 <td class="cell" id="18.20"></td>
             </tr>
             <tr class="row">
                 <td class="cell" id="19.1"></td>
-                <td class="cell" id="19.2"></td>
+                <td class="cell RandomWall" id="19.2"></td>
                 <td class="cell" id="19.3"></td>
                 <td class="cell" id="19.4"></td>
-                <td class="cell" id="19.5"></td>
+                <td class="cell RandomWall" id="19.5"></td>
                 <td class="cell" id="19.6"></td>
                 <td class="cell" id="19.7"></td>
                 <td class="cell" id="19.8"></td>
                 <td class="cell" id="19.9"></td>
                 <td class="cell" id="19.10"></td>
                 <td class="cell" id="19.11"></td>
-                <td class="cell" id="19.12"></td>
-                <td class="cell" id="19.13"></td>
+                <td class="cell RandomWall" id="19.12"></td>
+                <td class="cell RandomWall" id="19.13"></td>
                 <td class="cell" id="19.14"></td>
                 <td class="cell" id="19.15"></td>
                 <td class="cell" id="19.16"></td>
@@ -453,21 +453,21 @@
                 <td class="cell" id="20.1"></td>
                 <td class="cell" id="20.2"></td>
                 <td class="cell" id="20.3"></td>
-                <td class="cell" id="20.4"></td>
+                <td class="cell RandomWall" id="20.4"></td>
                 <td class="cell" id="20.5"></td>
                 <td class="cell" id="20.6"></td>
                 <td class="cell" id="20.7"></td>
-                <td class="cell" id="20.8"></td>
+                <td class="cell RandomWall" id="20.8"></td>
                 <td class="cell" id="20.9"></td>
                 <td class="cell" id="20.10"></td>
                 <td class="cell" id="20.11"></td>
                 <td class="cell" id="20.12"></td>
-                <td class="cell" id="20.13"></td>
+                <td class="cell RandomWall" id="20.13"></td>
                 <td class="cell" id="20.14"></td>
                 <td class="cell" id="20.15"></td>
                 <td class="cell" id="20.16"></td>
                 <td class="cell" id="20.17"></td>
-                <td class="cell" id="20.18"></td>
+                <td class="cell RandomWall" id="20.18"></td>
                 <td class="cell" id="20.19"></td>
                 <td class="cell" id="20.20"></td>
             </tr>
