--- a/GameGrid.html
+++ b/GameGrid.html
@@ -292,7 +292,7 @@
                         <input type="number" id="enterWin">
                     </form>
                 </td>
-                <td><div class="submitButton" onClick="setWinScore()">Submit</div></td>
+                <td><p class="submitButton" onClick="setWinScore()">Submit</p></td>
             </tr>
             <tr class="row">
                 <td class="cell" id="13.1"></td>
