--- a/GameGrid.html
+++ b/GameGrid.html
@@ -29,7 +29,14 @@
                 <td class="cell" id="1.18"></td>
                 <td class="cell" id="1.19"></td>
                 <td class="cell" id="1.20"></td>
-                <td rowspan="2"><img src="./Icons/GameIcon.png" class="header" alt="Logo"><h1 class="header">Untitled Game</h1></td>
+                <td rowspan="2">
+                    <table class="score">
+                        <tr>
+                            <td class="" rowspan="2"><img src="./Icons/GameIcon.png" class="TitleLogo"></td>
+                            <td><h1>Untitled Game</h1></td>
+                        </tr>
+                    </table>
+                </td>
             </tr>
             <tr class="row">
                 <td class="cell" id="2.1"></td>
