--- a/GameRandom.html
+++ b/GameRandom.html
@@ -240,7 +240,7 @@
                 <td class="cell" id="10.18"></td>
                 <td class="cell" id="10.19"></td>
                 <td class="cell" id="10.20"></td>
-                <td class="score">Copyright Scott Frizzell 2019</td>
+                <td class="score"></td>
                 <td><a href="./index.html">Main Menu</a></td>
             </tr>
             <tr class="row">
