--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <td class="GameMode"><a href="GameField.html"><div><img src="./Icons/FieldLogo.png" class="GameLogo"><br>Field</div></a></td>
                 <td class="GameMode"><a href="GameGrid.html"><div><img src="./Icons/GridLogo.png" class="GameLogo"><br>Grid</div></a></td>
                 <td class="GameMode"><a href="GameRandom.html"><div><img src="./Icons/RandomLogo.png" class="GameLogo"><br>Random</div></a></td>
-                <td class="GameMode"><a href="GameFieldTimed.html"><div><img src="./Icons/FieldLogo.png" class="GameLogo"><br>Field Timed</div></a></td>
+                <!--<td class="GameMode"><a href="GameFieldTimed.html"><div><img src="./Icons/FieldLogo.png" class="GameLogo"><br>Field Timed</div></a></td>-->
             </tr>
         </table>
         <a href="./DevMode.html" id="devMode">Developer Mode</a>
