--- a/GameField.html
+++ b/GameField.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Untitled Game</title>
+        <title>Block Game</title>
         <link href="./GameCss.css" type="text/css" rel="stylesheet">
         <link href="./Icons/GameIcon.png" rel="shortcut icon">
         <script src="./PointsMechanics.js"></script>
@@ -33,7 +33,7 @@
                     <table class="score">
                         <tr>
                             <td class="" rowspan="2"><img src="./Icons/GameIcon.png" class="TitleLogo"></td>
-                            <td><h1>Untitled Game</h1></td>
+                            <td><h1>Block Game</h1></td>
                         </tr>
                     </table>
                 </td>
