--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Untitled Game</title>
+        <title>Block Game</title>
         <link href="./GameMainScreenCss.css" type="text/css" rel="stylesheet">
         <link href="./Icons/GameIcon.png" rel="shortcut icon">
     </head>
@@ -9,7 +9,7 @@
         <table>
             <tr>
                 <td><img src="./Icons/GameIcon.png" class="TitleLogo"></td>
-                <td><h1>Untitled Game</h1></td>
+                <td><h1>Block Game</h1></td>
             </tr>
         </table>
         <table>
