--- a/GameGrid.html
+++ b/GameGrid.html
@@ -149,7 +149,7 @@
                 <td class="cell wall" id="6.18"></td>
                 <td class="cell" id="6.19"></td>
                 <td class="cell" id="6.20"></td>
-                <td rowspan="3" class="bluscore score">Blu Score:</td>
+                <td rowspan="3" class="bluscore score">Blue Score:</td>
                 <td rowspan="3" class="bluscore" id="bluScore"></td>
             </tr>
             <tr class="row">
