--- a/GameField.html
+++ b/GameField.html
@@ -264,7 +264,7 @@
                 <td class="cell" id="11.18"></td>
                 <td class="cell" id="11.19"></td>
                 <td class="cell" id="11.20"></td>
-                <td class="score">Set Winning Score:</td>
+                <!--<td class="score">Set Winning Score:</td>-->
             </tr>
             <tr class="row">
                 <td class="cell" id="12.1"></td>
@@ -287,12 +287,12 @@
                 <td class="cell" id="12.18"></td>
                 <td class="cell" id="12.19"></td>
                 <td class="cell" id="12.20"></td>
-                <td>
+                <!--<td>
                     <form class="score">
                         <input type="number" id="enterWin">
                     </form>
-                </td>
-                <td><div class="submitButton" onClick="setWinScore()">Submit</div></td>
+                </td>-->
+                <!--<td><div class="submitButton" onClick="setWinScore()">Submit</div></td>-->
             </tr>
             <tr class="row">
                 <td class="cell" id="13.1"></td>
