--- a/GameRandom.html
+++ b/GameRandom.html
@@ -218,6 +218,7 @@
                 <td class="cell" id="9.19"></td>
                 <td class="cell" id="9.20"></td>
                 <td class="score" id="winScore"></td>
+                <td><a href="./index.html">Main Menu</a></td>
             </tr>
             <tr class="row">
                 <td class="cell" id="10.1"></td>
@@ -240,8 +241,6 @@
                 <td class="cell" id="10.18"></td>
                 <td class="cell" id="10.19"></td>
                 <td class="cell" id="10.20"></td>
-                <td class="score"></td>
-                <td><a href="./index.html">Main Menu</a></td>
             </tr>
             <tr class="row">
                 <td class="cell" id="11.1"></td>
@@ -264,7 +263,7 @@
                 <td class="cell" id="11.18"></td>
                 <td class="cell" id="11.19"></td>
                 <td class="cell" id="11.20"></td>
-                <td class="score">Set Winning Score:</td>
+                <!--<td class="score">Set Winning Score:</td>-->
             </tr>
             <tr class="row">
                 <td class="cell" id="12.1"></td>
@@ -287,12 +286,12 @@
                 <td class="cell" id="12.18"></td>
                 <td class="cell RandomWall" id="12.19"></td>
                 <td class="cell" id="12.20"></td>
-                <td>
+                <!--<td>
                     <form class="score">
                         <input type="number" id="enterWin">
                     </form>
-                </td>
-                <td><div class="submitButton" onClick="setWinScore()">Submit</div></td>
+                </td>-->
+                <!--<td><div class="submitButton" onClick="setWinScore()">Submit</div></td>-->
             </tr>
             <tr class="row">
                 <td class="cell RandomWall" id="13.1"></td>
